terraform/eks-cluster/01-vpc.tf
resource "aws_vpc" "main_vpc" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = "${var.vpc_name}-${var.eks_tier}"
  }
}
